--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "mongoose-sequence": "^5.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
