--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "SET DEBUG=eduwork-server:* && nodemon ./bin/www"
+    "start": "set DEBUG=eduwork-server:* && nodemon ./bin/www"
   },
   "dependencies": {
     "@casl/ability": "^6.0.0",
